# BankingAgent

./: .gitignore  README.md  manage.sh  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
mcp_client/: agent_graph.py  agent_service.py  llm_config.py  mcp_utils.py  models.py  visualize_graph.py
mcp_server/: data.py  main.py
mcp_server/tools/: account_info.py  balance.py  commodity_prices.py  stock_prices.py
